--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
   </head>
   <body>
     <main>
-      <section class="player player--0 player--active">
-        <h2 class="name" id="name--0">Player 1</h2>
-        <p class="score" id="score--0">43</p>
+      <section class="player playerOne playerActive">
+        <h2 class="name" id="nameOne">Player 1</h2>
+        <p class="score" id="scoreOne">0</p>
         <div class="current">
-          <p class="current-label">Current</p>
-          <p class="current-score" id="current--0">0</p>
+          <p class="currentLabel">Current</p>
+          <p class="currentScore" id="currentOne">0</p>
         </div>
       </section>
-      <section class="player player--1">
-        <h2 class="name" id="name--1">Player 2</h2>
-        <p class="score" id="score--1">24</p>
+      <section class="player playerTwo">
+        <h2 class="name" id="nameTwo">Player 2</h2>
+        <p class="score" id="scoreTwo">0</p>
         <div class="current">
-          <p class="current-label">Current</p>
-          <p class="current-score" id="current--1">0</p>
+          <p class="currentLabel">Current</p>
+          <p class="currentScore" id="currentTwo">0</p>
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice" />
-      <button class="btn btn--new">🔄 New game</button>
-      <button class="btn btn--roll">🎲 Roll dice</button>
-      <button class="btn btn--hold">📥 Hold</button>
+      <img src="./assets/dice-5.png" alt="Playing dice" class="dice" />
+      <button class="btn btnNew">🔄 New game</button>
+      <button class="btn btnRoll">🎲 Roll dice</button>
+      <button class="btn btnHold">📥 Hold</button>
     </main>
     <script src="script.js"></script>
   </body>
