Small stylistic changes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </section>
 
       <img src="./assets/dice-5.png" alt="Playing dice" class="dice" />
+      <h1>Pig Game 🐷</h1>
       <button class="btn btnNew">🔄 New game</button>
       <button class="btn btnRoll">🎲 Roll dice</button>
       <button class="btn btnHold">📥 Hold</button>
